@@ -1,1 +1,7 @@
 # Java Virtual Thread
+
+This project aims to evaluate the performance of **Sequential**, **Platform Threads**, **Asynchronous Programs**, and the newly introduced **Virtual Threads** in different scenarios.
+
+# How to Run
+
+You should have Java version 19 or 20 to run the above code. Since Java Virtual Thread is a preview feature, make sure to provide the `--enable-preview`    option when you run it. You can ignore this message if you are running on a version higher than Java 20.
